--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 </head>
 
 <body>
+    <audio autoplay="autoplay" height="100" width="100" id="myAudio2">
+        <source src="aud2.mp3" type="audio/mp3" />
+        <embed height="100" width="100" src="aud.mp3" />
+      </audio>
     <div id="wrapper">
         <div class="flag__birthday">
             <img src="./images/1.png" alt="" width="350" class="flag__left">
@@ -71,7 +75,7 @@
             <div class="right">
                 <div class="box__account">
                     <div class="image">
-                        <img src="./images/unnamed.png" alt="">
+                        <img src="./images/unnamed2.jpg" alt="">
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
@@ -134,7 +138,7 @@
             <div class="boxMail-container">
                 <div class="card1">
                     <div class="userImg">
-                        <img src="images/unnamed.png" alt="">
+                        <img src="images/unnamed3.jpg" alt="">
                     </div>
                     <h4 class="username">To: Sanjeevani 💖<span class="underline"></span></h4>
 
@@ -145,14 +149,13 @@
                 </div>
                 <div class="card2">
                     <div class="card2-content">
-                        <h3>To You!</h3>
-                        <h2>Happy birthday 🥳🎂🥳 chanda the day you come into my life I was not really much attached to
-                            you but day by day you became close to my heart . And now you are truly my younger sister. I
-                            wish I could remove some of the pain from your life which you are bearing alone. But you're
-                            always welcome 🤗 you can talk anytime you want to talk specially those which you can't say
-                            to others. And this year your all dreams come true . I wish that your
-                            brother could wish you but if couldn't wish on him behalf I am wishing you happy birthday
-                            🎈🎂🎈 sana . Don't be Sad ok be happy 😌
+                        <h3>To Bestestestt Person!</h3>
+                        <h2>Happy birthday Broooooooo🥳🎂🥳 
+                            I can not even express how much you mean to me bro and today is the day you came into this world.
+                            Legit such an important day for me hehe. Thanks to uncle and aunty for getting naughty and making you.
+                            Making the most perfect person to ever exist. Happy Birthday Love. I really would love to hug 
+                            you right now. You have no idea how important you are to me bhai and I feel so helpless not being able
+                            to be with you. I really wish I could be there to help you bhai. But you will always have my support and love💕
                         </h2>
 
                         <div class="imageCute2">
@@ -167,7 +170,7 @@
 </body>
 <script>
     let datetxt = "30 June";
-    let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
+    let datatxtletter = "I can not even express how much you mean to me bro and today is the day you came into this world. Legit such an important day for me hehe. Thanks to uncle and aunty for getting naughty and making you. Making the most perfect person to ever exist. Happy Birthday Love. I really would love to hug you right now. You have no idea how important you are to me bhai and I feel so helpless not being able to be with you. I really wish I could be there to help you bhai. But you will always have my support and love💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
@@ -277,5 +280,11 @@
     });
 
 </script>
+<script>
+      function playAudio() {
+        var audio = document.getElementById("myAudio2");
+        audio.play();
+      }
+    </script>
 
 </html>
